modules/gdscript/tests/scripts/analyzer/errors/native_freed_instance.gd
func test():
	var x = Node.new()

	x.free()

	var ok = x
	var bad: Node = x
